Bug #25059 Unique index lookup execute(Commit) on non existing tuple can lead to 4012
Submitted: 14 Dec 2006 10:09 Modified: 28 Dec 2006 15:34
Reporter: Jonas Oreland
Status: Closed
Category:Server: NDBAPI Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[14 Dec 2006 10:09] Jonas Oreland
Description:
 

How to repeat:
 

Suggested fix:
[15 Dec 2006 15:40] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17052

ChangeSet@1.2280, 2006-12-15 15:39:45+01:00, jonas@perch.ndb.mysql.com +5 -0
  ndb - bug#25059
    incorrect handling of commit/ignore error in unique index code
[28 Dec 2006 15:34] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented fix in 5.0.34 & 5.1.15 changelogs.