ndb - bug#25059   incorrect handling of commit/ignore error in unique index code